# agentic-patterns-book

./: .gitignore  CLAUDE.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
dev/: LESSONS.md  standard_operating_procedure.md
dev/agents/: blacksmith.md
dev/specs/: documentation.md  graph-refactoring.md  missing-patterns-plan.md  pattern-implementation.md
docs/: ATTRIBUTION.md  LESSONS.md  attribution.md  getting-started.md  idioms.md  index.md  refactoring_spec.md  reproduce.md
docs/css/: mermaid.css
docs/js/: mermaid-init.js
docs/patterns/: 01-prompt-chaining.md  02-routing.md  03-parallelization.md  04-reflection.md  05-tool-use.md  06-planning.md  06b-dynamic-planning.md  07-multi-agent.md  08-memory.md  09-learning.md  10-mcp-integration.md  11-goal-monitoring.md  12-exception-recovery.md  13-human-in-loop.md  14-knowledge-retrieval.md  15-agent-marketplace.md  16-resource-optimization.md  17-reasoning-weaver.md  index.md  (+6 more)
examples/: cartographer_demo.py
scripts/: integration_test.sh  run_evals.sh
tests/: __init__.py  conftest.py  test_agent_marketplace.py  test_cartographer_extraction.py  test_domain_exploration.py  test_dynamic_planning.py  test_evaluation.py  test_exception_recovery.py  test_goal_monitoring.py  test_guardrails.py  test_human_in_loop.py  test_knowledge_retrieval.py  test_learning.py  test_mcp_integration.py  test_memory.py  test_multi_agent.py  test_parallelization.py  test_planning.py  test_prioritization.py  test_prompt_chaining.py  test_reflection.py  test_resource_aware.py  test_routing.py  test_thought_candidates.py  test_tool_use.py  test_tree_of_thoughts.py  test_utils.py
(+64 files in other folders)
