[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-patterns"
version = "0.1.0"
description = "Agentic Design Patterns implemented with pydantic-ai"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "haiku-rag[slim]>=0.22.0",
    "pydantic-ai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-cinder>=1.2",
    "mkdocs-llmstxt>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_patterns"]

[tool.ruff]
line-length = 79
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "ANN",
]
ignore = [
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-v",
    "--strict-markers",
    "--cov=agentic_patterns",
    "--cov-fail-under=80",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["src/agentic_patterns"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
